# cgal

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  export.sh  test.txt
.github/workflows/: build_doc.yml  delete_doc.yml  filter_testsuite.yml
.travis/: build_package.sh  packages.txt  template.txt
AABB_tree/benchmark/AABB_tree/: CMakeLists.txt
AABB_tree/include/CGAL/: AABB_traits.h
AABB_tree/test/AABB_tree/: CMakeLists.txt  aabb_test_empty_tree.cpp
BGL/test/BGL/: test_cgal_bgl_named_params.cpp
CGAL_ImageIO/include/CGAL/: Image_3_impl.h
CGAL_ImageIO/src/CGAL_ImageIO/: Image_3.cpp
Classification/include/CGAL/Classification/: Evaluation.h  Feature_set.h  Point_set_feature_generator.h  Point_set_neighborhood.h  Random_forest_classifier.h  Sum_of_weighted_features_classifier.h
Convex_hull_3/doc/Convex_hull_3/CGAL/: convex_hull_3.h
Convex_hull_3/include/CGAL/: convex_hull_3.h
Convex_hull_3/test/Convex_hull_3/: test_extreme_points.cpp
Documentation/doc/Documentation/: Installation.txt
GraphicsView/include/CGAL/Qt/: Basic_viewer_qt.h
Installation/: CHANGES.md  CMakeLists.txt
Installation/cmake/modules/: CGAL_CreateSingleSourceCGALProgram.cmake  CGAL_CreateTargetForCoverage.cmake  CGAL_Macros.cmake  CGAL_SetupCGAL_Qt5Dependencies.cmake  CGAL_add_test.cmake  CGAL_generate_reports.cmake  cat.cmake
Installation/include/CGAL/: CGAL_double.h  config.h  gl.h
Installation/test/Installation/: CMakeLists.txt
Intersections_3/include/CGAL/: intersection_3.h
Maintenance/test_handling/: create_testresult_page  testresult.css
Mesh_3/examples/Mesh_3/: CMakeLists.txt
Mesh_3/include/CGAL/: cgalMeshDomainWithNurbsFeatures.h  cgalMeshDomainWithRationalBezierFeatures.h  make_mesh_3.h
Mesh_3/include/CGAL/IO/: File_binary_mesh_3.h
Mesh_3/include/CGAL/Mesh_3/: Protect_edges_sizing_field.h  Protect_nurbs_edges_sizing_field.h  Sliver_perturber.h  Slivers_exuder.h
Periodic_3_triangulation_3/include/CGAL/: Periodic_3_triangulation_3.h
Point_set_processing_3/examples/Point_set_processing_3/: CMakeLists.txt
Poisson_surface_reconstruction_3/test/Poisson_surface_reconstruction_3/: CMakeLists.txt
Polygon_mesh_processing/examples/Polygon_mesh_processing_VTK/: CMakeLists.txt  IsotropicRemeshingFilter.xml  IsotropicRemeshingWithEdgesFilter.xml  README  pqIsotropicRemeshingWidget.cxx  pqIsotropicRemeshingWidget.h  test_isotropic_remeshing.cpp  test_isotropic_remeshing_with_edges.cpp  vtkIsotropicRemeshingFilter.cxx  vtkIsotropicRemeshingFilter.h  vtkIsotropicRemeshingWithEdgesFilter.cxx  vtkIsotropicRemeshingWithEdgesFilter.h
Polygon_mesh_processing/examples/Polygon_mesh_processing_VTK/data/: Cube-edges.vtk  Cube_tr.vtk  Cube_triangulated.vtk  Sphere.vtu  Test_total.vtk
Polygon_mesh_processing/include/CGAL/Polygon_mesh_processing/: extrude.h  locate.h  repair_polygon_soup.h
Polygon_mesh_processing/test/Polygon_mesh_processing/: extrude_test.cpp
Polygonal_surface_reconstruction/examples/Polygonal_surface_reconstruction/: polyfit_example_model_complexty_control.cpp  polyfit_example_user_provided_planes.cpp  polyfit_example_with_region_growing.cpp  polyfit_example_without_input_planes.cpp
Polyhedron/demo/Polyhedron/: CMakeLists.txt  Edge_container.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  NURBS.cpp  Polyhedron_3.qrc  Scene.cpp  Scene.h  Scene_c2t3_item.h  Scene_c3t3_item.cpp  Scene_c3t3_item.h  Scene_group_item.cpp  Scene_image_item.cpp  Scene_implicit_function_item.cpp  Scene_item.cpp  Scene_nef_polyhedron_item.cpp  Scene_nef_polyhedron_item.h  Scene_plane_item.cpp  Scene_points_with_normal_item.cpp  Scene_points_with_normal_item.h  Scene_polygon_soup_item.cpp  Scene_polyhedron_item.cpp  Scene_polyhedron_item.h  Scene_polyhedron_item_k_ring_selection.h  Scene_polyhedron_selection_item.cpp  Scene_polyhedron_selection_item.h  Scene_polylines_item.cpp  Scene_segmented_image_item.cpp  Scene_segmented_image_item.h  Scene_spheres_item.cpp  Scene_spheres_item.h  Scene_surface_mesh_item.cpp  Scene_surface_mesh_item.h  Scene_textured_polyhedron_item.cpp  Scene_triangulation_3_item.cpp  Statistics_on_item_dialog.ui  Triangle_container.cpp  Viewer.cpp  Viewer.h  (+7 more)
Polyhedron/demo/Polyhedron/GlSplat/: GlSplat.cpp  GlSplat.h  Shader.cpp  Shader.h
Polyhedron/demo/Polyhedron/Plugins/Cad/: C3t3_cad_type.h  CAD_initialization_plugin.cpp  CAD_mesher_protect_initialization_dialog.ui  CAD_refine_dialog.ui  CAD_refine_plugin.cpp  CMakeLists.txt  Cad_c3t3_io_plugin.cpp  Cad_mesher_dialog.ui  Cad_mesher_plugin.cpp  Cad_meshing_plugin.cpp  Installation.md  Nurbs_surface_plugin.cpp  Rational_bezier_curve_plugin.cpp  Rational_bezier_surface_plugin.cpp  Scene_c3t3_cad_item.cpp  Scene_c3t3_cad_item.h  Scene_c3t3_cad_item_config.h  Scene_cad_item.cpp  Scene_cad_item.h  Scene_nurbs_item.cpp  Scene_nurbs_item.h  Scene_rational_bezier_curve_item.cpp  Scene_rational_bezier_curve_item.h  Scene_rational_bezier_surface_item.cpp  Scene_rational_bezier_surface_item.h
Polyhedron/demo/Polyhedron/Plugins/Cad/cmake/: FindBlaze.cmake
Polyhedron/demo/Polyhedron/Plugins/Surface_mesh_deformation/: CMakeLists.txt  Create_surface.ui  Scene_edit_polyhedron_item.cpp  Surface_from_picked_points_plugin.cpp
Polyhedron/demo/Polyhedron/include/: Point_set_3.h
Polyhedron/demo/Polyhedron/resources/: no_interpolation_shader.f  no_interpolation_shader.v  shader_c3t3_edges.v  shader_no_light_no_selection.f  (+4 more)
STL_Extension/include/CGAL/: Modifiable_priority_queue.h  iterator.h
Scripts/developer_scripts/: autotest_cgal  cgal_compute_total_coverage.py  cgal_create_release_with_cmake.cmake  run_testsuite_from_branch_name.sh
Stream_support/test/Stream_support/: test_OBJ.cpp  test_OFF.cpp
Surface_mesh_deformation/include/CGAL/: Surface_mesh_deformation.h
Testsuite/test/: collect_cgal_testresults_from_cmake
Tetrahedral_remeshing/doc/Tetrahedral_remeshing/: Tetrahedral_remeshing.txt
Tetrahedral_remeshing/include/CGAL/: tetrahedral_remeshing.h
Three/doc/Three/: Three.txt
Triangulation_on_sphere_2/include/CGAL/: Delaunay_triangulation_on_sphere_traits_2.h
(+94 files in other folders)
