include( polyhedron_demo_macros )
if ( EIGEN3_FOUND AND "${EIGEN3_VERSION}" VERSION_GREATER "3.1.90" )
  polyhedron_demo_plugin(edit_polyhedron_plugin Edit_polyhedron_plugin Deform_mesh.ui)
  target_link_libraries(edit_polyhedron_plugin scene_polyhedron_item scene_edit_polyhedron_item scene_polyhedron_selection_item)

  qt5_wrap_cpp( VOLUME_MOC_OUTFILES ${CMAKE_CURRENT_SOURCE_DIR}/../Mesh_3/Volume_plane_interface.h )
  qt5_wrap_ui( dockUI_FILES Create_surface.ui )
  polyhedron_demo_plugin(surface_from_picked_points_plugin Surface_from_picked_points_plugin ${dockUI_FILES} ${VOLUME_MOC_OUTFILES})
  target_link_libraries(surface_from_picked_points_plugin scene_polyhedron_item scene_polylines_item scene_points_with_normal_item)
else()
  message(STATUS "NOTICE: The polyhedron edit plugin and the surface from picked points plugin require Eigen 3.2 (or higher) and will not be available.")
endif()
